# Gamma-Exposure-Dashboard

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_FUNCTIONS.md  FREE-CHART-OPTIONS.md  MULTI-MARKET-SETUP.md  QUICKSTART.md  README.md  REDESIGN.md  SETUP-COMPLETE.md  TIME-MACHINE-ARCHITECTURE.md  VERCEL-DEPLOYMENT.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/checkout-session/: page.tsx
app/dashboard/: page.tsx
backend/: .env.example  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  FIXES-SUMMARY.md  RAILWAY-SETUP-GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  railway.json
backend-python/: .gitignore  Dockerfile  pyproject.toml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 3db43e3de48b_add_quant_and_ml_tables.py  a1b2c3d4e5f6_add_netflow_indexes.py
backend-python/app/: config.py  database.py  main.py
backend-python/app/models/: __init__.py  billing.py  journal.py  ml.py  option_snapshot.py  quant.py  suggestion.py
backend-python/app/routers/: ai.py  backtest.py  journal.py  ml.py  options.py  quant.py  waitlist.py
backend-python/app/services/: data_retrieval.py
backend-python/app/services/ai/: analyst.py
backend-python/app/services/backtester/: data_loader.py  engine.py  indicators.py  options_engine.py  portfolio_engine.py  strategy_builder.py
backend-python/app/services/flow/: netflow.py  service.py
backend-python/app/services/greeks/: engine.py
backend-python/app/services/ingestion/: __init__.py  cboe.py  cot.py  jugaad.py  normalizer.py  nse_live.py  saver.py  scheduler.py  yahoo.py
backend-python/app/services/journal/: service.py
backend-python/app/services/ml/: materializer.py  pipeline.py
backend-python/app/services/quant/: engine.py
backend-python/app/services/suggestions/: service.py
backend-python/app/utils/: market_hours.py
backend-python/tests/: conftest.py  test_netflow.py
backend-python/tests/test_ai/: test_analyst.py
backend-python/tests/test_api/: test_routes.py
backend-python/tests/test_backtester/: test_engine.py  test_portfolio.py
backend-python/tests/test_ingestion/: test_cboe.py  test_cot.py  test_jugaad.py  test_nse_live.py  test_yahoo.py
backend-python/tests/test_ml/: test_pipeline.py
backend/src/: server.ts
backend/tmp/: test_nse_axios.js
components/: AIAnalystPanel.tsx  AIChatPanel.tsx  enhanced-time-machine.tsx  example-integration.tsx  flow-historical-view.tsx  gamma-exposure-dashboard.tsx  gamma-exposure-visualizer.tsx  option-flow-dashboard.tsx  option-netflow-dashboard.tsx  pricing-method-toggle.tsx  session-timer.tsx  time-machine.tsx  total-gex.tsx
components/algorithms/: backtest-charts.tsx  backtest-config-form.tsx  backtest-dashboard.tsx  backtest-metrics-grid.tsx  (+4 more)
docs/: BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  SYSTEM_OVERVIEW.md
lib/: backend-api.ts  calculations.ts  chart-config.ts  d3-helpers.ts  data-service.ts  design-tokens.ts  types.ts
(+77 files in other folders)
